RTC5impl.hpp


_declspec(dllimport) void __stdcall if_pin_cond(const UINT Mask1, const UINT Mask0);

_declspec(dllimport) void __stdcall if_not_pin_cond(const UINT Mask1, const UINT Mask0);

_declspec(dllimport) void __stdcall switch_ioport(const UINT MaskBits, const UINT ShiftBits);

_declspec(dllimport) void __stdcall list_jump_cond(const UINT Mask1, const UINT Mask0, const UINT Pos);

_declspec(dllimport) void __stdcall n_select_char_set(const UINT CardNo, const UINT No);

_declspec(dllimport) void __stdcall n_mark_text(const UINT CardNo, const char* Text);

_declspec(dllimport) void __stdcall n_mark_text_abs(const UINT CardNo, const char* Text);

_declspec(dllimport) void __stdcall n_mark_char(const UINT CardNo, const UINT Char);

_declspec(dllimport) void __stdcall n_mark_char_abs(const UINT CardNo, const UINT Char);

_declspec(dllimport) void __stdcall select_char_set(const UINT No);

_declspec(dllimport) void __stdcall mark_text(const char* Text);

_declspec(dllimport) void __stdcall mark_text_abs(const char* Text);

_declspec(dllimport) void __stdcall mark_char(const UINT Char);

_declspec(dllimport) void __stdcall mark_char_abs(const UINT Char);

_declspec(dllimport) void __stdcall n_mark_serial(const UINT CardNo, const UINT Mode, const UINT Digits);

_declspec(dllimport) void __stdcall n_mark_serial_abs(const UINT CardNo, const UINT Mode, const UINT Digits);

_declspec(dllimport) void __stdcall n_mark_date(const UINT CardNo, const UINT Part, const UINT Mode);

_declspec(dllimport) void __stdcall n_mark_date_abs(const UINT CardNo, const UINT Part, const UINT Mode);

_declspec(dllimport) void __stdcall n_mark_time(const UINT CardNo, const UINT Part, const UINT Mode);

_declspec(dllimport) void __stdcall n_mark_time_abs(const UINT CardNo, const UINT Part, const UINT Mode);

_declspec(dllimport) void __stdcall n_time_fix_f_off(const UINT CardNo, const UINT FirstDay, const UINT Offset);

_declspec(dllimport) void __stdcall n_time_fix_f(const UINT CardNo, const UINT FirstDay);

_declspec(dllimport) void __stdcall n_time_fix(const UINT CardNo);

_declspec(dllimport) void __stdcall mark_serial(const UINT Mode, const UINT Digits);

_declspec(dllimport) void __stdcall mark_serial_abs(const UINT Mode, const UINT Digits);

_declspec(dllimport) void __stdcall mark_date(const UINT Part, const UINT Mode);

_declspec(dllimport) void __stdcall mark_date_abs(const UINT Part, const UINT Mode);

_declspec(dllimport) void __stdcall mark_time(const UINT Part, const UINT Mode);

_declspec(dllimport) void __stdcall mark_time_abs(const UINT Part, const UINT Mode);

_declspec(dllimport) void __stdcall time_fix_f_off(const UINT FirstDay, const UINT Offset);

_declspec(dllimport) void __stdcall time_fix_f(const UINT FirstDay);

_declspec(dllimport) void __stdcall time_fix(void);

_declspec(dllimport) void __stdcall n_clear_io_cond_list(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Mask);

_declspec(dllimport) void __stdcall n_set_io_cond_list(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Mask);

_declspec(dllimport) void __stdcall n_write_io_port_mask_list(const UINT CardNo, const UINT Value, const UINT Mask);

_declspec(dllimport) void __stdcall n_write_8bit_port_list(const UINT CardNo, const UINT Value);

_declspec(dllimport) void __stdcall n_read_io_port_list(const UINT CardNo);

_declspec(dllimport) void __stdcall n_write_da_x_list(const UINT CardNo, const UINT x, const UINT Value);

_declspec(dllimport) void __stdcall n_write_io_port_list(const UINT CardNo, const UINT Value);

_declspec(dllimport) void __stdcall n_write_da_1_list(const UINT CardNo, const UINT Value);

_declspec(dllimport) void __stdcall n_write_da_2_list(const UINT CardNo, const UINT Value);

_declspec(dllimport) void __stdcall clear_io_cond_list(const UINT Mask1, const UINT Mask0, const UINT MaskClear);

_declspec(dllimport) void __stdcall set_io_cond_list(const UINT Mask1, const UINT Mask0, const UINT MaskSet);

_declspec(dllimport) void __stdcall write_io_port_mask_list(const UINT Value, const UINT Mask);

_declspec(dllimport) void __stdcall write_8bit_port_list(const UINT Value);

_declspec(dllimport) void __stdcall read_io_port_list(void);

_declspec(dllimport) void __stdcall write_da_x_list(const UINT x, const UINT Value);

_declspec(dllimport) void __stdcall write_io_port_list(const UINT Value);

_declspec(dllimport) void __stdcall write_da_1_list(const UINT Value);

_declspec(dllimport) void __stdcall write_da_2_list(const UINT Value);

_declspec(dllimport) void __stdcall n_laser_signal_on_list(const UINT CardNo);

_declspec(dllimport) void __stdcall n_laser_signal_off_list(const UINT CardNo);

_declspec(dllimport) void __stdcall n_para_laser_on_pulses_list(const UINT CardNo, const UINT Period, const UINT Pulses, const UINT P);

_declspec(dllimport) void __stdcall n_laser_on_pulses_list(const UINT CardNo, const UINT Period, const UINT Pulses);

_declspec(dllimport) void __stdcall n_laser_on_list(const UINT CardNo, const UINT Period);

_declspec(dllimport) void __stdcall n_set_laser_delays(const UINT CardNo, const long LaserOnDelay, const UINT LaserOffDelay);

_declspec(dllimport) void __stdcall n_set_standby_list(const UINT CardNo, const UINT HalfPeriod, const UINT PulseLength);

_declspec(dllimport) void __stdcall n_set_laser_pulses(const UINT CardNo, const UINT HalfPeriod, const UINT PulseLength);

_declspec(dllimport) void __stdcall n_set_firstpulse_killer_list(const UINT CardNo, const UINT Length);

_declspec(dllimport) void __stdcall n_set_qswitch_delay_list(const UINT CardNo, const UINT Delay);

_declspec(dllimport) void __stdcall n_set_laser_pin_out_list(const UINT CardNo, const UINT Pins);

_declspec(dllimport) void __stdcall n_set_vector_control(const UINT CardNo, const UINT Ctrl, const UINT Value);

_declspec(dllimport) void __stdcall n_set_default_pixel_list(const UINT CardNo, const UINT PulseLength);

_declspec(dllimport) void __stdcall n_set_auto_laser_params_list(const UINT CardNo, const UINT Ctrl, const UINT Value, const UINT MinValue, const UINT MaxValue);

_declspec(dllimport) void __stdcall n_set_laser_timing(const UINT CardNo, const UINT HalfPeriod, const UINT PulseLength1, const UINT PulseLength2, const UINT TimeBase);

_declspec(dllimport) void __stdcall laser_signal_on_list(void);

_declspec(dllimport) void __stdcall laser_signal_off_list(void);

_declspec(dllimport) void __stdcall para_laser_on_list(const UINT Period, const UINT Pulses, const UINT P);

_declspec(dllimport) void __stdcall laser_on_pulses_list(const UINT Period, const UINT Pulses);

_declspec(dllimport) void __stdcall laser_on_list(const UINT Period);

_declspec(dllimport) void __stdcall set_laser_delays(const long LaserOnDelay, const UINT LaserOffDelay);

_declspec(dllimport) void __stdcall set_standby_list(const UINT HalfPeriod, const UINT PulseLength);

_declspec(dllimport) void __stdcall set_laser_pulses(const UINT HalfPeriod, const UINT PulseLength);

_declspec(dllimport) void __stdcall set_firstpulse_killer_list(const UINT Length);

_declspec(dllimport) void __stdcall set_qswitch_delay_list(const UINT Delay);

_declspec(dllimport) void __stdcall set_laser_pin_out_list(const UINT Pins);

_declspec(dllimport) void __stdcall set_vector_control(const UINT Ctrl, const UINT Value);

_declspec(dllimport) void __stdcall set_default_pixel_list(const UINT PulseLength);

_declspec(dllimport) void __stdcall set_auto_laser_params_list(const UINT Ctrl, const UINT Value, const UINT MinValue, const UINT MaxValue);

_declspec(dllimport) void __stdcall set_laser_timing(const UINT HalfPeriod, const UINT PulseLength1, const UINT PulseLength2, const UINT TimeBase);

_declspec(dllimport) void __stdcall n_fly_return(const UINT CardNo, const long X, const long Y);

_declspec(dllimport) void __stdcall n_set_rot_center_list(const UINT CardNo, const long X, const long Y);

_declspec(dllimport) void __stdcall n_set_ext_start_delay_list(const UINT CardNo, const long Delay, const UINT EncoderNo);

_declspec(dllimport) void __stdcall n_set_fly_x(const UINT CardNo, const double ScaleX);

_declspec(dllimport) void __stdcall n_set_fly_y(const UINT CardNo, const double ScaleY);

_declspec(dllimport) void __stdcall n_set_fly_rot(const UINT CardNo, const double Resolution);

_declspec(dllimport) void __stdcall n_set_fly_x_pos(const UINT CardNo, const double ScaleX);

_declspec(dllimport) void __stdcall n_set_fly_y_pos(const UINT CardNo, const double ScaleY);

_declspec(dllimport) void __stdcall n_set_fly_rot_pos(const UINT CardNo, const double Resolution);

_declspec(dllimport) void __stdcall n_set_mcbsp_x_list(const UINT CardNo, const double ScaleX);

_declspec(dllimport) void __stdcall n_set_mcbsp_y_list(const UINT CardNo, const double ScaleY);

_declspec(dllimport) void __stdcall n_set_mcbsp_rot_list(const UINT CardNo, const double Resolution);

_declspec(dllimport) void __stdcall n_wait_for_encoder_mode(const UINT CardNo, const long Value, const UINT EncoderNo, const long Mode);

_declspec(dllimport) void __stdcall n_wait_for_mcbsp(const UINT CardNo, const UINT Axis, const long Value, const long Mode);

_declspec(dllimport) void __stdcall n_set_encoder_speed(const UINT CardNo, const UINT EncoderNo, const double Speed, const double Smooth);

_declspec(dllimport) void __stdcall n_get_mcbsp_list(const UINT CardNo);

_declspec(dllimport) void __stdcall n_store_encoder(const UINT CardNo, const UINT Pos);

_declspec(dllimport) void __stdcall n_wait_for_encoder(const UINT CardNo, const long Value, const UINT EncoderNo);

_declspec(dllimport) void __stdcall fly_return(const long X, const long Y);

_declspec(dllimport) void __stdcall set_rot_center_list(const long X, const long Y);

_declspec(dllimport) void __stdcall set_ext_start_delay_list(const long Delay, const UINT EncoderNo);

_declspec(dllimport) void __stdcall set_fly_x(const double ScaleX);

_declspec(dllimport) void __stdcall set_fly_y(const double ScaleY);

_declspec(dllimport) void __stdcall set_fly_rot(const double Resolution);

_declspec(dllimport) void __stdcall set_fly_x_pos(const double ScaleX);

_declspec(dllimport) void __stdcall set_fly_y_pos(const double ScaleY);

_declspec(dllimport) void __stdcall set_fly_rot_pos(const double Resolution);

_declspec(dllimport) void __stdcall set_mcbsp_x_list(const double ScaleX);

_declspec(dllimport) void __stdcall set_mcbsp_y_list(const double ScaleY);

_declspec(dllimport) void __stdcall set_mcbsp_rot_list(const double Resolution);

_declspec(dllimport) void __stdcall wait_for_encoder_mode(const long Value, const UINT EncoderNo, const long Mode);

_declspec(dllimport) void __stdcall wait_for_mcbsp(const UINT Axis, const long Value, const long Mode);

_declspec(dllimport) void __stdcall set_encoder_speed(const UINT EncoderNo, const double Speed, const double Smooth);

_declspec(dllimport) void __stdcall get_mcbsp_list(void);

_declspec(dllimport) void __stdcall store_encoder(const UINT Pos);

_declspec(dllimport) void __stdcall wait_for_encoder(const long Value, const UINT EncoderNo);

_declspec(dllimport) void __stdcall n_save_and_restart_timer(const UINT CardNo);

_declspec(dllimport) void __stdcall n_set_wobbel(const UINT CardNo, const UINT Transversal, const UINT Longitudinal, const double Freq);

_declspec(dllimport) void __stdcall n_set_wobbel_mode(const UINT CardNo, const UINT Transversal, const UINT Longitudinal, const double Freq, const long Mode);

_declspec(dllimport) void __stdcall n_set_trigger(const UINT CardNo, const UINT Period, const UINT Signal1, const UINT Signal2);

_declspec(dllimport) void __stdcall n_set_pixel_line(const UINT CardNo, const UINT Channel, const UINT HalfPeriod, const double dX, const double dY);

_declspec(dllimport) void __stdcall n_set_n_pixel(const UINT CardNo, const UINT PulseLength, const UINT AnalogOut, const UINT Number);

_declspec(dllimport) void __stdcall n_set_pixel(const UINT CardNo, const UINT PulseLength, const UINT AnalogOut);

_declspec(dllimport) void __stdcall n_rs232_write_text_list(const UINT CardNo, const char* pData);

_declspec(dllimport) void __stdcall n_set_mcbsp_out(const UINT CardNo, const UINT Signal1, const UINT Signal2);