RTC5Import.pas

procedure if_pin_cond(Mask1: LongWord; Mask0: LongWord); stdcall; external RTC5DLL;
procedure if_not_pin_cond(Mask1: LongWord; Mask0: LongWord); stdcall; external RTC5DLL;
procedure switch_ioport(MaskBits: LongWord; ShiftBits: LongWord); stdcall; external RTC5DLL;
procedure list_jump_cond(Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_select_char_set(CardNo: LongWord; No: LongWord); stdcall; external RTC5DLL;
procedure n_mark_text(CardNo: LongWord; Text: PChar); stdcall; external RTC5DLL;
procedure n_mark_text_abs(CardNo: LongWord; Text: PChar); stdcall; external RTC5DLL;
procedure n_mark_char(CardNo: LongWord; Char: LongWord); stdcall; external RTC5DLL;
procedure n_mark_char_abs(CardNo: LongWord; Char: LongWord); stdcall; external RTC5DLL;
procedure select_char_set(No: LongWord); stdcall; external RTC5DLL;
procedure mark_text(Text: PChar); stdcall; external RTC5DLL;
procedure mark_text_abs(Text: PChar); stdcall; external RTC5DLL;
procedure mark_char(Char: LongWord); stdcall; external RTC5DLL;
procedure mark_char_abs(Char: LongWord); stdcall; external RTC5DLL;
procedure n_mark_serial(CardNo: LongWord; Mode: LongWord; Digits: LongWord); stdcall; external RTC5DLL;
procedure n_mark_serial_abs(CardNo: LongWord; Mode: LongWord; Digits: LongWord); stdcall; external RTC5DLL;
procedure n_mark_date(CardNo: LongWord; Part: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure n_mark_date_abs(CardNo: LongWord; Part: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure n_mark_time(CardNo: LongWord; Part: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure n_mark_time_abs(CardNo: LongWord; Part: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure n_time_fix_f_off(CardNo: LongWord; FirstDay: LongWord; Offset: LongWord); stdcall; external RTC5DLL;
procedure n_time_fix_f(CardNo: LongWord; FirstDay: LongWord); stdcall; external RTC5DLL;
procedure n_time_fix(CardNo: LongWord); stdcall; external RTC5DLL;
procedure mark_serial(Mode: LongWord; Digits: LongWord); stdcall; external RTC5DLL;
procedure mark_serial_abs(Mode: LongWord; Digits: LongWord); stdcall; external RTC5DLL;
procedure mark_date(Part: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure mark_date_abs(Part: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure mark_time(Part: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure mark_time_abs(Part: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure time_fix_f_off(FirstDay: LongWord; Offset: LongWord); stdcall; external RTC5DLL;
procedure time_fix_f(FirstDay: LongWord); stdcall; external RTC5DLL;
procedure time_fix(); stdcall; external RTC5DLL;
procedure n_clear_io_cond_list(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Mask: LongWord); stdcall; external RTC5DLL;
procedure n_set_io_cond_list(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Mask: LongWord); stdcall; external RTC5DLL;
procedure n_write_io_port_mask_list(CardNo: LongWord; Value: LongWord; Mask: LongWord); stdcall; external RTC5DLL;
procedure n_write_8bit_port_list(CardNo: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure n_read_io_port_list(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_write_da_x_list(CardNo: LongWord; x: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure n_write_io_port_list(CardNo: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure n_write_da_1_list(CardNo: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure n_write_da_2_list(CardNo: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure clear_io_cond_list(Mask1: LongWord; Mask0: LongWord; MaskClear: LongWord); stdcall; external RTC5DLL;
procedure set_io_cond_list(Mask1: LongWord; Mask0: LongWord; MaskSet: LongWord); stdcall; external RTC5DLL;
procedure write_io_port_mask_list(Value: LongWord; Mask: LongWord); stdcall; external RTC5DLL;
procedure write_8bit_port_list(Value: LongWord); stdcall; external RTC5DLL;
procedure read_io_port_list(); stdcall; external RTC5DLL;
procedure write_da_x_list(x: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure write_io_port_list(Value: LongWord); stdcall; external RTC5DLL;
procedure write_da_1_list(Value: LongWord); stdcall; external RTC5DLL;
procedure write_da_2_list(Value: LongWord); stdcall; external RTC5DLL;
procedure n_laser_signal_on_list(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_laser_signal_off_list(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_para_laser_on_pulses_list(CardNo: LongWord; Period: LongWord; Pulses: LongWord; P: LongWord); stdcall; external RTC5DLL;
procedure n_laser_on_pulses_list(CardNo: LongWord; Period: LongWord; Pulses: LongWord); stdcall; external RTC5DLL;
procedure n_laser_on_list(CardNo: LongWord; Period: LongWord); stdcall; external RTC5DLL;
procedure n_set_laser_delays(CardNo: LongWord; LaserOnDelay: LongInt; LaserOffDelay: LongWord); stdcall; external RTC5DLL;
procedure n_set_standby_list(CardNo: LongWord; HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC5DLL;
procedure n_set_laser_pulses(CardNo: LongWord; HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC5DLL;
procedure n_set_firstpulse_killer_list(CardNo: LongWord; Length: LongWord); stdcall; external RTC5DLL;
procedure n_set_qswitch_delay_list(CardNo: LongWord; Delay: LongWord); stdcall; external RTC5DLL;
procedure n_set_laser_pin_out_list(CardNo: LongWord; Pins: LongWord); stdcall; external RTC5DLL;
procedure n_set_vector_control(CardNo: LongWord; Ctrl: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure n_set_default_pixel_list(CardNo: LongWord; PulseLength: LongWord); stdcall; external RTC5DLL;
procedure n_set_auto_laser_params_list(CardNo: LongWord; Ctrl: LongWord; Value: LongWord; MinValue: LongWord; MaxValue: LongWord); stdcall; external RTC5DLL;
procedure n_set_laser_timing(CardNo: LongWord; HalfPeriod: LongWord; PulseLength1: LongWord; PulseLength2: LongWord; TimeBase: LongWord); stdcall; external RTC5DLL;
procedure laser_signal_on_list(); stdcall; external RTC5DLL;
procedure laser_signal_off_list(); stdcall; external RTC5DLL;
procedure para_laser_on_list(Period: LongWord; Pulses: LongWord; P: LongWord); stdcall; external RTC5DLL;
procedure laser_on_pulses_list(Period: LongWord; Pulses: LongWord); stdcall; external RTC5DLL;
procedure laser_on_list(Period: LongWord); stdcall; external RTC5DLL;
procedure set_laser_delays(LaserOnDelay: LongInt; LaserOffDelay: LongWord); stdcall; external RTC5DLL;
procedure set_standby_list(HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC5DLL;
procedure set_laser_pulses(HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC5DLL;
procedure set_firstpulse_killer_list(Length: LongWord); stdcall; external RTC5DLL;
procedure set_qswitch_delay_list(Delay: LongWord); stdcall; external RTC5DLL;
procedure set_laser_pin_out_list(Pins: LongWord); stdcall; external RTC5DLL;
procedure set_vector_control(Ctrl: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure set_default_pixel_list(PulseLength: LongWord); stdcall; external RTC5DLL;
procedure set_auto_laser_params_list(Ctrl: LongWord; Value: LongWord; MinValue: LongWord; MaxValue: LongWord); stdcall; external RTC5DLL;
procedure set_laser_timing(HalfPeriod: LongWord; PulseLength1: LongWord; PulseLength2: LongWord; TimeBase: LongWord); stdcall; external RTC5DLL;
procedure n_fly_return(CardNo: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC5DLL;
procedure n_set_rot_center_list(CardNo: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC5DLL;
procedure n_set_ext_start_delay_list(CardNo: LongWord; Delay: LongInt; EncoderNo: LongWord); stdcall; external RTC5DLL;
procedure n_set_fly_x(CardNo: LongWord; ScaleX: Double); stdcall; external RTC5DLL;
procedure n_set_fly_y(CardNo: LongWord; ScaleY: Double); stdcall; external RTC5DLL;
procedure n_set_fly_rot(CardNo: LongWord; Resolution: Double); stdcall; external RTC5DLL;
procedure n_set_fly_x_pos(CardNo: LongWord; ScaleX: Double); stdcall; external RTC5DLL;
procedure n_set_fly_y_pos(CardNo: LongWord; ScaleY: Double); stdcall; external RTC5DLL;
procedure n_set_fly_rot_pos(CardNo: LongWord; Resolution: Double); stdcall; external RTC5DLL;
procedure n_set_mcbsp_x_list(CardNo: LongWord; ScaleX: Double); stdcall; external RTC5DLL;
procedure n_set_mcbsp_y_list(CardNo: LongWord; ScaleY: Double); stdcall; external RTC5DLL;
procedure n_set_mcbsp_rot_list(CardNo: LongWord; Resolution: Double); stdcall; external RTC5DLL;
procedure n_wait_for_encoder_mode(CardNo: LongWord; Value: LongInt; EncoderNo: LongWord; Mode: LongInt); stdcall; external RTC5DLL;
procedure n_wait_for_mcbsp(CardNo: LongWord; Axis: LongWord; Value: LongInt; Mode: LongInt); stdcall; external RTC5DLL;
procedure n_set_encoder_speed(CardNo: LongWord; EncoderNo: LongWord; Speed: Double; Smooth: Double); stdcall; external RTC5DLL;
procedure n_get_mcbsp_list(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_store_encoder(CardNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_wait_for_encoder(CardNo: LongWord; Value: LongInt; EncoderNo: LongWord); stdcall; external RTC5DLL;
procedure fly_return(X: LongInt; Y: LongInt); stdcall; external RTC5DLL;
procedure set_rot_center_list(X: LongInt; Y: LongInt); stdcall; external RTC5DLL;
procedure set_ext_start_delay_list(Delay: LongInt; EncoderNo: LongWord); stdcall; external RTC5DLL;
procedure set_fly_x(ScaleX: Double); stdcall; external RTC5DLL;
procedure set_fly_y(ScaleY: Double); stdcall; external RTC5DLL;
procedure set_fly_rot(Resolution: Double); stdcall; external RTC5DLL;
procedure set_fly_x_pos(ScaleX: Double); stdcall; external RTC5DLL;
procedure set_fly_y_pos(ScaleY: Double); stdcall; external RTC5DLL;
procedure set_fly_rot_pos(Resolution: Double); stdcall; external RTC5DLL;
procedure set_mcbsp_x_list(ScaleX: Double); stdcall; external RTC5DLL;
procedure set_mcbsp_y_list(ScaleY: Double); stdcall; external RTC5DLL;
procedure set_mcbsp_rot_list(Resolution: Double); stdcall; external RTC5DLL;
procedure wait_for_encoder_mode(Value: LongInt; EncoderNo: LongWord; Mode: LongInt); stdcall; external RTC5DLL;
procedure wait_for_mcbsp(Axis: LongWord; Value: LongInt; Mode: LongInt); stdcall; external RTC5DLL;
procedure set_encoder_speed(EncoderNo: LongWord; Speed: Double; Smooth: Double); stdcall; external RTC5DLL;
procedure get_mcbsp_list(); stdcall; external RTC5DLL;
procedure store_encoder(Pos: LongWord); stdcall; external RTC5DLL;
procedure wait_for_encoder(Value: LongInt; EncoderNo: LongWord); stdcall; external RTC5DLL;
procedure n_save_and_restart_timer(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_set_wobbel(CardNo: LongWord; Transversal: LongWord; Longitudinal: LongWord; Freq: Double); stdcall; external RTC5DLL;
procedure n_set_wobbel_mode(CardNo: LongWord; Transversal: LongWord; Longitudinal: LongWord; Freq: Double; Mode: LongInt); stdcall; external RTC5DLL;
procedure n_set_trigger(CardNo: LongWord; Period: LongWord; Signal1: LongWord; Signal2: LongWord); stdcall; external RTC5DLL;
procedure n_set_pixel_line(CardNo: LongWord; Channel: LongWord; HalfPeriod: LongWord; dX: Double; dY: Double); stdcall; external RTC5DLL;
procedure n_set_n_pixel(CardNo: LongWord; PulseLength: LongWord; AnalogOut: LongWord; Number: LongWord); stdcall; external RTC5DLL;
procedure n_set_pixel(CardNo: LongWord; PulseLength: LongWord; AnalogOut: LongWord); stdcall; external RTC5DLL;
procedure n_rs232_write_text_list(CardNo: LongWord; pData: PChar); stdcall; external RTC5DLL;
procedure n_set_mcbsp_out(CardNo: LongWord; Signal1: LongWord; Signal2: LongWord); stdcall; external RTC5DLL;
